package com.mayor.kavi.data.models.enums

/**
 * Represents the possible play styles of a player.
 */
enum class PlayStyle {
    AGGRESSIVE,
    BALANCED,
    CAUTIOUS
}